--- a/Ramana.html
+++ b/Ramana.html
@@ -6,7 +6,7 @@
 <div class="header">
 </div>
 <div class="main">
-<img  
+<img  src="IMG_20200426_154648.jpg" width="300px" height="300px;>
 </div>
 </body>
 </html>
