--- a/Ramana.html
+++ b/Ramana.html
@@ -7,7 +7,7 @@
 <div class="header">
 </div>
 <div class="main">
-<img  src="IMG_20200426_154648.jpg" width="300px" height="300px;>
+<img  src="IMG_20200426_154648.jpg" width="300px" height="300px">
 </div>
 </body>
 </html>
