--- a/Ramana.html
+++ b/Ramana.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet"type="text/css"src="ramana.css">
+<link rel="stylesheet"type="text/css"src="Ramana.css">
 </head>
 <body>
   <h1>Welcome to Ramana</h1>
