--- a/Ramana.html
+++ b/Ramana.html
@@ -5,6 +5,7 @@
 <body>
   <h1>Welcome to Ramana</h1>
 <div class="header">
+  <h1>Ramana</h1>
 </div>
 <div class="main">
 <img  src="IMG_20200426_154648.jpg" width="300px" height="300px">
