--- a/Ramana.html
+++ b/Ramana.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div class="header">
- <img src="teddy.jpg"
+ <img id="r" src="teddy.jpeg">
   <h1>Ramana</h1>
 </div>
 <div class="main">
