--- a/Ramana.html
+++ b/Ramana.html
@@ -2,13 +2,32 @@
 <head>
 <link rel="stylesheet"type="text/css" href="Ramana.css">
 </head>
-<body>
-<div class="header">
- <img id="r" src="teddy.jpeg">
-  <h1>Ramana</h1>
-</div>
-<div class="main">
-<img  src="IMG_20200426_154648.jpg" width="300px" height="300px">
-</div>
-</body>
+ <body> 
+  <div class="header"> 
+   <img id="t" src="teddy.jpeg" width="100px" height="100px"> 
+   <h1>Venkata Ramana</h1> 
+  </div> 
+  <div class="navbar"> 
+   <ul> 
+    <li><a href="frnds.html">Home</a></li> 
+    <li><a href="rimg.html">Gallery</a></li> 
+    <li><a>About</a></li> 
+    <li><a>Contact</a></li> 
+   </ul> 
+  </div> 
+  <div class="main"> 
+   <img id="i" src="IMG_20200426_154648.jpg" width="700px" height="700px"> 
+   <p>Velupula Venkata Ramana shortly known as raman's. Work is Worship best suites our teddy, his character is a rear combo of wit and wisdom. He will initiate every dam thing in our room and he is studying in ECE branch.He have so many girl friends He is lover boy in our room.</p> 
+  </div> 
+ </body>
+ </html>
+
+
+
+
+
+
+
+
+
 </html>
