--- a/rimg.html
+++ b/rimg.html
@@ -1,1 +1,27 @@
 
+<html>
+ <head> 
+ </head> 
+ <body> 
+  <div id="head"> 
+   <a href="frnds.html"><img id="i" src="teddy.jpeg"></a> 
+   <h1>Some photos of Ramana</h1> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20200428-WA0012.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200428-WA0011.jpg" width="48%" height="500px"> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20191219-WA0034.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20191117-WA0002.jpg" width="48%" height="500px"> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20191012-WA0010.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200109-WA0025.jpg" width="48%" height="500px"> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20200428-WA0010.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG_20200426_154648.jpg" width="48%" height="500px"> 
+  </div> 
+ </body>
+</html>
