--- a/rimg.html
+++ b/rimg.html
@@ -5,7 +5,7 @@
  </head> 
  <body> 
   <div id="head"> 
-   <a href="frnds.html"><img id="i" src="teddy.jpeg"></a> 
+   <a href="README.md"><img id="i" src="teddy.jpeg"></a> 
    <h1>Some photos of Ramana</h1> 
   </div> 
   <div> 
