--- a/Ramana.html
+++ b/Ramana.html
@@ -12,7 +12,14 @@
     <li><a href="README.md">Home</a></li> 
     <li><a href="rimg.html">Gallery</a></li> 
     <li><a>About</a></li> 
-    <li><a>Contact</a></li> 
+    
+    <li><a>Contact</a>
+
+    <ul> 
+      <li><a>Phone</a></li> 
+      <li><a>Location</a></li> 
+     </ul> 
+    </li> 
    </ul> 
   </div> 
   <div class="main"> 
