--- a/uimg.html
+++ b/uimg.html
@@ -1,6 +1,6 @@
 <html>
  <head> 
- <link rel="stylesheet" type="text/css" href="rimg.css">
+ <link rel="stylesheet" type="text/css" href="uimg.css">
  </head> 
  <body> 
   <div id="head"> 
