--- a/uimg.html
+++ b/uimg.html
@@ -8,20 +8,20 @@
    <h1>Some photos of Umar</h1> 
   </div> 
   <div> 
-   <img id="a" src="umar/IMG-20200109-WA0046.jpg" width="48%" height="500px"> 
-   <img id="a" src="umar/IMG-20200429-WA0017.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200109-WA0046.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0017.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
-   <img id="a" src="umar/IMG-20200429-WA0013.jpg" width="48%" height="500px"> 
-   <img id="a" src="umar/IMG-20200429-WA0018.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0013.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0018.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
-   <img id="a" src="umar/IMG-20200429-WA0015.jpg" width="48%" height="500px"> 
-   <img id="a" src="umar/IMG-20200429-WA0016.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0015.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0016.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
-   <img id="a" src="umar/IMG-20200109-WA0017.jpg" width="48%" height="500px"> 
-   <img id="a" src="umar/IMG-20191221-WA0021.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200109-WA0017.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20191221-WA0021.jpg" width="48%" height="500px"> 
   </div> 
  </body>
 </html>
