--- a/uimg.html
+++ b/uimg.html
@@ -4,7 +4,7 @@
  </head> 
  <body> 
   <div id="head"> 
-   <a href="frnds.html"><img id="i" src="punch.jpeg"></a> 
+   <a href="README.md"><img id="i" src="punch.jpeg"></a> 
    <h1>Some photos of Umar</h1> 
   </div> 
   <div> 
