--- a/umar.html
+++ b/umar.html
@@ -4,7 +4,7 @@
  </head> 
  <body> 
   <div class="header"> 
-   <img id="t" src="punch.jpeg" width="100px" height="100px"> 
+  <a href="README.md"><img id="t" src="punch.jpeg" width="100px" height="100px"></a>
    <h1>Umar</h1> 
   </div> 
   <div class="navbar"> 
