--- a/umar.html
+++ b/umar.html
@@ -9,7 +9,7 @@
   </div> 
   <div class="navbar"> 
    <ul> 
-    <li><a href="frnds.html">Home</a></li> 
+    <li><a href="README.md">Home</a></li> 
     <li><a href="uimg.html">Gallery</a></li> 
     <li><a>About</a></li> 
     <li><a>Contact</a></li> 
