--- a/moni.html
+++ b/moni.html
@@ -8,8 +8,8 @@
   </div> 
   <div class="navbar"> 
    <ul> 
-    <li><a href="frnds.html">Home</a></li> 
-    <li><a href="uimg.html">Gallery</a></li> 
+    <li><a href="README.md">Home</a></li> 
+    <li><a href="mimg.html">Gallery</a></li> 
     <li><a>About</a></li> 
     <li><a>Contact</a></li> 
    </ul> 
