--- a/moni.html
+++ b/moni.html
@@ -17,7 +17,8 @@
   </div> 
   <div class="main"> 
    <img id="i" src="IMG_20200426_154624.jpg" width="700px" height="700px"> 
-   <p></p> 
+
+<p>Moneeshwar Soddala shortly known as Moni. He is studying in MEC branch. He is formal topper of our university.</p> 
   </div> 
   <div id="v"> 
    <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
