--- a/moni.html
+++ b/moni.html
@@ -5,7 +5,7 @@
  <body> 
   <div class="header"> 
    <img id="t" src="logo.png" width="100px" height="100px"> 
-   <h1>Umar</h1> 
+   <h1>Moneeshwar</h1> 
   </div> 
   <div class="navbar"> 
    <ul> 
