--- a/mimg.html
+++ b/mimg.html
@@ -9,20 +9,20 @@
    <h1>Some photos of Moneeshwar</h1> 
   </div> 
   <div> 
-   <img id="a" src="IMG-20200109-WA0046.jpg" width="48%" height="500px"> 
-   <img id="a" src="IMG-20200429-WA0017.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni2.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni1.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
-   <img id="a" src="IMG-20200429-WA0013.jpg" width="48%" height="500px"> 
-   <img id="a" src="IMG-20200429-WA0018.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni3.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni4.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
-   <img id="a" src="IMG-20200429-WA0015.jpg" width="48%" height="500px"> 
-   <img id="a" src="IMG-20200429-WA0016.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni5.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni6.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
-   <img id="a" src="IMG-20200109-WA0017.jpg" width="48%" height="500px"> 
-   <img id="a" src="IMG-20191221-WA0021.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni7.jpg" width="48%" height="500px"> 
+   <img id="a" src="moni8.jpg" width="48%" height="500px"> 
   </div> 
  </body>
 </html>
