--- a/Ramana.html
+++ b/Ramana.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet"type="text/css" href="Ramana.css">
+<link rel="stylesheet"type="text/css" href="umar.css">
 </head>
  <body> 
   <div class="header"> 
