--- a/rimg.html
+++ b/rimg.html
@@ -1,7 +1,7 @@
 
 <html>
  <head> 
-  <link rel="stylesheet" type="text/css"href="rimg.css">
+  <link rel="stylesheet" type="text/css"href="uimg.css">
  </head> 
  <body> 
   <div id="head"> 
