--- a/mimg.html
+++ b/mimg.html
@@ -1,7 +1,7 @@
 
 <html>
  <head> 
- <link rel="stylesheet" type="text/css" href="mimg.css">
+ <link rel="stylesheet" type="text/css" href="uimg.css">
  </head> 
  <body> 
   <div id="head"> 
