--- a/naveen.html
+++ b/naveen.html
@@ -1,1 +1,29 @@
-
+<html>
+ <head> 
+  <link rel="stylesheet" type="text/css" href="umar.css">
+ </head> 
+ <body> 
+  <div class="header"> 
+  <a href="README.md"><img id="t" src="naveen.png" width="100px" height="100px"></a>
+   <h1>Naveen</h1> 
+  </div> 
+  <div class="navbar"> 
+   <ul> 
+    <li><a href="README.md">Home</a></li> 
+    <li><a href="nimg.html">Gallery</a></li> 
+    <li><a>About</a></li> 
+    <li><a>Contact</a></li> 
+   </ul> 
+  </div> 
+  <div class="main"> 
+   <img id="i" src="IMG_20200426_154530.jpg" width="700px" height="700px"> 
+   <p>   </p> 
+  </div> 
+  <div id="v"> 
+   <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
+   <a href="www.whatsapp.com"><img id="icon" src="images.png"></a> 
+   <a href="www.instagram.com"><img id="icon" src="insta.jpeg"></a> 
+   <p></p> 
+  </div> 
+ </body>
+</html>
