--- a/naveen.html
+++ b/naveen.html
@@ -17,7 +17,7 @@
   </div> 
   <div class="main"> 
    <img id="i" src="IMG_20200426_154530.jpg" width="700px" height="700px"> 
-   <p>   </p> 
+   <p> Naveen Kumar Reddy shortly known as Naveen. His branch is EEE. Beleive or not our foody is famous for his sense of humour. He does naughty things, most chill out bro. </p> 
   </div> 
   <div id="v"> 
    <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
