--- a/naveen.html
+++ b/naveen.html
@@ -4,7 +4,7 @@
  </head> 
  <body> 
   <div class="header"> 
-  <a href="README.md"><img id="t" src="naveen.png" width="100px" height="100px"></a>
+  <a href="README.md"><img id="t" src="comrade.png" width="100px" height="100px"></a>
    <h1>Naveen</h1> 
   </div> 
   <div class="navbar"> 
