--- a/nimg.html
+++ b/nimg.html
@@ -1,1 +1,35 @@
-
+<html>
+ <head> 
+   <link rel="stylesheet.css" type="text/css" href="naveen.css">
+ </head> 
+ <body> 
+  <div class="header"> 
+   <img id="n" src="naveen/comrade.png" width="90px" height="90px"> 
+   <h1>Some photos of Naveen</h1> 
+  </div> 
+  <div class="container1"> 
+   <div class="image1"> 
+   </div> 
+  </div> 
+  <div class="container2"> 
+   <div class="image2"> 
+   </div> 
+  </div> 
+  <div class="container3"> 
+   <div class="image3"> 
+   </div> 
+  </div> 
+  <div class="container4"> 
+   <div class="image4"> 
+   </div> 
+  </div> 
+  <div class="container5"> 
+   <div class="image5"> 
+   </div> 
+  </div> 
+  <div class="container6"> 
+   <div class="image6"> 
+   </div> 
+  </div> 
+ </body>
+</html>
