--- a/nimg.html
+++ b/nimg.html
@@ -1,10 +1,10 @@
 <html>
  <head> 
-   <link rel="stylesheet.css" type="text/css" href="naveen.css">
+   <link rel="stylesheet" type="text/css" href="naveen.css">
  </head> 
  <body> 
   <div class="header"> 
-   <img id="n" src="naveen/comrade.png" width="90px" height="90px"> 
+   <img id="n" src="comrade.png" width="90px" height="90px"> 
    <h1>Some photos of Naveen</h1> 
   </div> 
   <div class="container1"> 
