--- a/nimg.html
+++ b/nimg.html
@@ -4,7 +4,7 @@
  </head> 
  <body> 
   <div class="header"> 
-   <img id="n" src="comrade.png" width="90px" height="90px"> 
+  <a href="README.md"><img id="n" src="comrade.png" width="90px" height="90px"></a>
    <h1>Some photos of Naveen</h1> 
   </div> 
   <div class="container1"> 
