--- a/Karthik.html
+++ b/Karthik.html
@@ -17,7 +17,7 @@
   </div> 
   <div class="main"> 
    <img id="i" src="IMG_20200426_154500.jpg" width="700px" height="700px"> 
-   <p>Shaik Umar shortly known as Umar. He is studying in MEC branch. He is also having so many girl friends. His ideology is Attitude is very small thing which makes big difference. Crazy guy,he mesmarizes everyone with his words .Even, his absence a day accounts a large deficit in our room</p> 
+   <p>Guru Siva Karthik shortly known as Karthik. His branch is EEE.He is mathematics topper in our room. </p> 
   </div> 
   <div id="v"> 
    <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
