--- a/kimg.html
+++ b/kimg.html
@@ -1,1 +1,36 @@
+<html>
+ <head> 
+   <link rel="stylesheet" type="text/css" href="Karthik.css">
+ </head> 
+ <body> 
+  <div class="header"> 
+  <a href="README.md"><img id="n" src="comrade.png" width="90px" height="90px"></a>
+   <h1>Some photos of Karthik</h1> 
+  </div> 
+  <div class="container1"> 
+   <div class="image1"> 
+   </div> 
+  </div> 
+  <div class="container2"> 
+   <div class="image2"> 
+   </div> 
+  </div> 
+  <div class="container3"> 
+   <div class="image3"> 
+   </div> 
+  </div> 
+  <div class="container4"> 
+   <div class="image4"> 
+   </div> 
+  </div> 
+  <div class="container5"> 
+   <div class="image5"> 
+   </div> 
+  </div> 
+  <div class="container6"> 
+   <div class="image6"> 
+   </div> 
+  </div> 
+ </body>
+</html>
 
