--- a/kimg.html
+++ b/kimg.html
@@ -4,7 +4,7 @@
  </head> 
  <body> 
   <div class="header"> 
-  <a href="README.md"><img id="n" src="comrade.png" width="90px" height="90px"></a>
+  <a href="README.md"><img id="n" src="pubglogo.jpeg" width="90px" height="90px"></a>
    <h1>Some photos of Karthik</h1> 
   </div> 
   <div class="container1"> 
