--- a/anjan.html
+++ b/anjan.html
@@ -5,7 +5,7 @@
  <body> 
   <div class="header"> 
   <a href="README.md"><img id="t" src="punch.jpeg" width="100px" height="100px"></a>
-   <h1>Umar</h1> 
+   <h1>Anjan</h1> 
   </div> 
   <div class="navbar"> 
    <ul> 
