--- a/anjan.html
+++ b/anjan.html
@@ -4,7 +4,7 @@
  </head> 
  <body> 
   <div class="header"> 
-  <a href="README.md"><img id="t" src="punch.jpeg" width="100px" height="100px"></a>
+  <a href="README.md"><img id="t" src="camlogo.jpeg" width="100px" height="100px"></a>
    <h1>Anjan</h1> 
   </div> 
   <div class="navbar"> 
