--- a/anjan.html
+++ b/anjan.html
@@ -10,7 +10,7 @@
   <div class="navbar"> 
    <ul> 
     <li><a href="README.md">Home</a></li> 
-    <li><a href="uimg.html">Gallery</a></li> 
+    <li><a href="aimg.html">Gallery</a></li> 
     <li><a>About</a></li> 
     <li><a>Contact</a></li> 
    </ul> 
