--- a/aimg.html
+++ b/aimg.html
@@ -8,7 +8,7 @@
    <h1>Some photos of Anjan</h1> 
   </div> 
   <div> 
-   <img id="a" src="IMG-20200109-WA0046.jpg" width="48%" height="500px"> 
+   <img id="a" src="anjan1.png" width="48%" height="500px"> 
    <img id="a" src="IMG-20200429-WA0017.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
