--- a/puru.html
+++ b/puru.html
@@ -17,7 +17,7 @@
   </div> 
   <div class="main"> 
    <img id="i" src="IMG_20200426_154549.jpg" width="700px" height="700px"> 
-   <p>Shaik Umar shortly known as Umar. He is studying in MEC branch. He is also having so many girl friends. His ideology is Attitude is very small thing which makes big difference. Crazy guy,he mesmarizes everyone with his words .Even, his absence a day accounts a large deficit in our room</p> 
+   <p>Ganga Purushotham Reddy shortly known as Puru. His branch is EEE.He is playboy and Love Puru in our room.</p> 
   </div> 
   <div id="v"> 
    <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
