--- a/ping.html
+++ b/ping.html
@@ -8,7 +8,7 @@
    <h1>Some photos of Puru</h1> 
   </div> 
   <div> 
-   <img id="a" src="IMG-20200109-WA0046.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG_20200426_154549.jpg" width="48%" height="500px"> 
    <img id="a" src="IMG-20200429-WA0017.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
