--- a/ping.html
+++ b/ping.html
@@ -17,7 +17,7 @@
   </div> 
   <div> 
    <img id="a" src="IMG-20191221-WA0000.jpg" width="48%" height="500px"> 
-   <img id="a" src="IMG-20200429-WA0016.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG20191220195007.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
    <img id="a" src="IMG-20200109-WA0017.jpg" width="48%" height="500px"> 
