--- a/vamshi.html
+++ b/vamshi.html
@@ -1,1 +1,30 @@
 
+<html>
+ <head> 
+  <link rel="stylesheet" type="text/css" href="umar.css">
+ </head> 
+ <body> 
+  <div class="header"> 
+  <a href="README.md"><img id="t" src="punch.jpeg" width="100px" height="100px"></a>
+   <h1>Umar</h1> 
+  </div> 
+  <div class="navbar"> 
+   <ul> 
+    <li><a href="README.md">Home</a></li> 
+    <li><a href="vimg.html">Gallery</a></li> 
+    <li><a>About</a></li> 
+    <li><a>Contact</a></li> 
+   </ul> 
+  </div> 
+  <div class="main"> 
+   <img id="i" src="IMG_20200426_154530.jpg" width="700px" height="700px"> 
+   <p>Shaik Umar shortly known as Umar. He is studying in MEC branch. He is also having so many girl friends. His ideology is Attitude is very small thing which makes big difference. Crazy guy,he mesmarizes everyone with his words .Even, his absence a day accounts a large deficit in our room</p> 
+  </div> 
+  <div id="v"> 
+   <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
+   <a href="www.whatsapp.com"><img id="icon" src="images.png"></a> 
+   <a href="www.instagram.com"><img id="icon" src="insta.jpeg"></a> 
+   <p></p> 
+  </div> 
+ </body>
+</html>
