--- a/vamshi.html
+++ b/vamshi.html
@@ -5,7 +5,7 @@
  </head> 
  <body> 
   <div class="header"> 
-  <a href="README.md"><img id="t" src="punch.jpeg" width="100px" height="100px"></a>
+  <a href="README.md"><img id="t" src="vlogo.jpeg" width="100px" height="100px"></a>
    <h1>Umar</h1> 
   </div> 
   <div class="navbar"> 
