--- a/vamshi.html
+++ b/vamshi.html
@@ -6,7 +6,7 @@
  <body> 
   <div class="header"> 
   <a href="README.md"><img id="t" src="vlogo.jpeg" width="100px" height="100px"></a>
-   <h1>Umar</h1> 
+   <h1>Vamshi</h1> 
   </div> 
   <div class="navbar"> 
    <ul> 
