--- a/vamshi.html
+++ b/vamshi.html
@@ -1,7 +1,7 @@
 
 <html>
  <head> 
-  <link rel="stylesheet" type="text/css" href="umar.css">
+  <link rel="stylesheet" type="text/css" href="vimg.css">
  </head> 
  <body> 
   <div class="header"> 
