--- a/vimg.html
+++ b/vimg.html
@@ -1,1 +1,27 @@
-
+<html>
+ <head> 
+ <link rel="stylesheet" type="text/css" href="uimg.css">
+ </head> 
+ <body> 
+  <div id="head"> 
+   <a href="README.md"><img id="i" src="punch.jpeg"></a> 
+   <h1>Some photos of Umar</h1> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20200109-WA0046.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0017.jpg" width="48%" height="500px"> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20200429-WA0013.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0018.jpg" width="48%" height="500px"> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20200429-WA0015.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20200429-WA0016.jpg" width="48%" height="500px"> 
+  </div> 
+  <div> 
+   <img id="a" src="IMG-20200109-WA0017.jpg" width="48%" height="500px"> 
+   <img id="a" src="IMG-20191221-WA0021.jpg" width="48%" height="500px"> 
+  </div> 
+ </body>
+</html>
