--- a/vimg.html
+++ b/vimg.html
@@ -4,8 +4,8 @@
  </head> 
  <body> 
   <div id="head"> 
-   <a href="README.md"><img id="i" src="punch.jpeg"></a> 
-   <h1>Some photos of Umar</h1> 
+   <a href="README.md"><img id="i" src="vlogo.jpeg"></a> 
+   <h1>Some photos of Vamshi</h1> 
   </div> 
   <div> 
    <img id="a" src="IMG-20200109-WA0046.jpg" width="48%" height="500px"> 
