--- a/vamshi.html
+++ b/vamshi.html
@@ -17,7 +17,7 @@
    </ul> 
   </div> 
   <div class="main"> 
-   <img id="i" src="IMG-20200310-WA0019.jpg" width="700px" height="700px"> 
+<a href="IMG-20200310-WA0019.jpg"><img id="i" src="IMG-20200310-WA0019.jpg" width="700px" height="700px"></a>
    <p id="z">VAMSHI IS<br>INNOCENT</p> 
   </div> 
   <div id="v"> 
