--- a/puru.html
+++ b/puru.html
@@ -16,7 +16,7 @@
    </ul> 
   </div> 
   <div class="main"> 
-   <img id="i" src="IMG_20200426_154549.jpg" width="700px" height="700px"> 
+  <a href="IMG_20200426_154549.jpg"><img id="i" src="IMG_20200426_154549.jpg" width="700px" height="700px"></a>
    <p>Ganga Purushotham Reddy shortly known as Puru. His branch is EEE.He is playboy and Love Puru in our room.</p> 
   </div> 
   <div id="v"> 
