--- a/anjan.html
+++ b/anjan.html
@@ -16,7 +16,7 @@
    </ul> 
   </div> 
   <div class="main"> 
-   <img id="i" src="IMG_20200426_165332.jpg" width="700px" height="700px"> 
+   <a href="IMG_20200426_165332.jpg"><img id="i" src="IMG_20200426_165332.jpg" width="700px" height="700px"></a>
    <p>Anjan Kumar shortly known as Anjan. His branch is ECE.He is all subjects topper in our room. He is also a playboy</p> 
   </div> 
   <div id="v"> 
