--- a/Karthik.html
+++ b/Karthik.html
@@ -16,7 +16,7 @@
    </ul> 
   </div> 
   <div class="main"> 
-   <img id="i" src="IMG_20200426_154500.jpg" width="700px" height="700px"> 
+   <a href="IMG_20200426_154500.jpg"><img id="i" src="IMG_20200426_154500.jpg" width="700px" height="700px"></a>
    <p>Guru Siva Karthik shortly known as Karthik. His branch is EEE.He is mathematics topper in our room. </p> 
   </div> 
   <div id="v"> 
