--- a/moni.html
+++ b/moni.html
@@ -16,7 +16,7 @@
    </ul> 
   </div> 
   <div class="main"> 
-   <img id="i" src="IMG_20200426_154624.jpg" width="700px" height="700px"> 
+   <a href="IMG_20200426_154624.jpg"><img id="i" src="IMG_20200426_154624.jpg" width="700px" height="700px"></a>
 
 <p>Moneeshwar Soddala shortly known as Moni. He is studying in MEC branch. He is formal topper of our university.</p> 
   </div> 
