--- a/umar.html
+++ b/umar.html
@@ -16,7 +16,7 @@
    </ul> 
   </div> 
   <div class="main"> 
-   <img id="i" src="IMG_20200426_154530.jpg" width="700px" height="700px"> 
+   <a href="IMG_20200426_154530.jpg"><img id="i" src="IMG_20200426_154530.jpg" width="700px" height="700px"></a>
    <p>Shaik Umar shortly known as Umar. He is studying in MEC branch. He is also having so many girl friends. His ideology is Attitude is very small thing which makes big difference. Crazy guy,he mesmarizes everyone with his words .Even, his absence a day accounts a large deficit in our room</p> 
   </div> 
   <div id="v"> 
