--- a/vimg.html
+++ b/vimg.html
@@ -8,7 +8,7 @@
    <h1>Some photos of Vamshi</h1> 
   </div> 
   <div> 
-   <img id="a" src="IMG-20200221-WA0012.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200221-WA0012.jpg"><img id="a" src="IMG-20200221-WA0012.jpg" width="48%" height="500px"></a>
    <img id="a" src="IMG-20200409-WA0003.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
