--- a/vimg.html
+++ b/vimg.html
@@ -9,7 +9,7 @@
   </div> 
   <div> 
    <a href="IMG-20200221-WA0012.jpg"><img id="a" src="IMG-20200221-WA0012.jpg" width="48%" height="500px"></a>
-   <img id="a" src="IMG-20200409-WA0003.jpg" width="48%" height="500px"> 
+  <a href="IMG-20200409-WA0003.jpg"><img id="a" src="IMG-20200409-WA0003.jpg" width="48%" height="500px"></a>
   </div> 
   <div> 
    <img id="a" src="IMG-20191121-WA0000.jpg" width="48%" height="500px"> 
