--- a/vimg.html
+++ b/vimg.html
@@ -12,7 +12,7 @@
   <a href="IMG-20200409-WA0003.jpg"><img id="a" src="IMG-20200409-WA0003.jpg" width="48%" height="500px"></a>
   </div> 
   <div> 
-   <img id="a" src="IMG-20191121-WA0000.jpg" width="48%" height="500px"> 
+   <a href="IMG-20191121-WA0000.jpg"><img id="a" src="IMG-20191121-WA0000.jpg" width="48%" height="500px"></a>
    <img id="a" src="IMG-20200430-WA0039.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
