--- a/vimg.html
+++ b/vimg.html
@@ -13,10 +13,10 @@
   </div> 
   <div> 
    <a href="IMG-20191121-WA0000.jpg"><img id="a" src="IMG-20191121-WA0000.jpg" width="48%" height="500px"></a>
-   <img id="a" src="IMG-20200430-WA0039.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200430-WA0039.jpg"><img id="a" src="IMG-20200430-WA0039.jpg" width="48%" height="500px"></a>
   </div> 
   <div> 
-   <img id="a" src="IMG-20200221-WA0011.jpg" width="48%" height="500px"> 
+   <a href="      <img id="a" src="IMG-20200221-WA0011.jpg" width="48%" height="500px"> 
    <img id="a" src="IMG-20200211-WA0005.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
