--- a/vimg.html
+++ b/vimg.html
@@ -16,7 +16,7 @@
    <a href="IMG-20200430-WA0039.jpg"><img id="a" src="IMG-20200430-WA0039.jpg" width="48%" height="500px"></a>
   </div> 
   <div> 
-   <a href="      <img id="a" src="IMG-20200221-WA0011.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200221-WA0011.jpg"><img id="a" src="IMG-20200221-WA0011.jpg" width="48%" height="500px"></a>
    <img id="a" src="IMG-20200211-WA0005.jpg" width="48%" height="500px"> 
   </div> 
   <div> 
