--- a/vimg.html
+++ b/vimg.html
@@ -17,7 +17,7 @@
   </div> 
   <div> 
    <a href="IMG-20200221-WA0011.jpg"><img id="a" src="IMG-20200221-WA0011.jpg" width="48%" height="500px"></a>
-   <img id="a" src="IMG-20200211-WA0005.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200211-WA0005.jpg"><img id="a" src="IMG-20200211-WA0005.jpg" width="48%" height="500px"></a>
   </div> 
   <div> 
    <img id="a" src="IMG_20191020_092145.jpg" width="48%" height="500px"> 
