--- a/vimg.html
+++ b/vimg.html
@@ -21,7 +21,7 @@
   </div> 
   <div> 
    <a href="IMG_20191020_092145.jpg"><img id="a" src="IMG_20191020_092145.jpg" width="48%" height="500px"></a>
-   <img id="a" src="IMG-20200115-WA0044.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200115-WA0044.jpg"><img id="a" src="IMG-20200115-WA0044.jpg" width="48%" height="500px"></a>
  </div>
    <div> 
    <img id="a" src="IMG20200410185052.jpg" width="48%" height="500px"> 
