--- a/vimg.html
+++ b/vimg.html
@@ -24,7 +24,7 @@
    <a href="IMG-20200115-WA0044.jpg"><img id="a" src="IMG-20200115-WA0044.jpg" width="48%" height="500px"></a>
  </div>
    <div> 
-   <img id="a" src="IMG20200410185052.jpg" width="48%" height="500px"> 
+   <a href="IMG20200410185052.jpg"><img id="a" src="IMG20200410185052.jpg" width="48%" height="500px"></a>
    <img id="a" src="IMG-20200221-WA0010.jpg" width="48%" height="500px"> 
   </div> 
  <div> 
