--- a/vimg.html
+++ b/vimg.html
@@ -25,7 +25,7 @@
  </div>
    <div> 
    <a href="IMG20200410185052.jpg"><img id="a" src="IMG20200410185052.jpg" width="48%" height="500px"></a>
-   <img id="a" src="IMG-20200221-WA0010.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200221-WA0010.jpg"><img id="a" src="IMG-20200221-WA0010.jpg" width="48%" height="500px"></a>
   </div> 
  <div> 
    <img id="a" src="IMG-20200221-WA0008.jpg" width="48%" height="500px"> 
