--- a/vimg.html
+++ b/vimg.html
@@ -28,7 +28,7 @@
    <a href="IMG-20200221-WA0010.jpg"><img id="a" src="IMG-20200221-WA0010.jpg" width="48%" height="500px"></a>
   </div> 
  <div> 
-   <img id="a" src="IMG-20200221-WA0008.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200221-WA0008.jpg"><img id="a" src="IMG-20200221-WA0008.jpg" width="48%" height="500px"></a>
    <img id="a" src="IMG-20200310-WA0019.jpg" width="48%" height="500px"> 
   </div> 
   
