--- a/vimg.html
+++ b/vimg.html
@@ -29,7 +29,7 @@
   </div> 
  <div> 
    <a href="IMG-20200221-WA0008.jpg"><img id="a" src="IMG-20200221-WA0008.jpg" width="48%" height="500px"></a>
-   <img id="a" src="IMG-20200310-WA0019.jpg" width="48%" height="500px"> 
+   <a href="IMG-20200310-WA0019.jpg"><img id="a" src="IMG-20200310-WA0019.jpg" width="48%" height="500px"></a>
   </div> 
   
 
