--- a/vamshi.html
+++ b/vamshi.html
@@ -21,7 +21,7 @@
    <p id="z">VAMSHI IS<br>INNOCENT</p> 
   </div> 
   <div id="v"> 
-   <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
+   <a href="https://www.facebook.com/vamshi.gujjuboina"><img id="icon" src="fb.png"></a> 
    <a href="www.whatsapp.com"><img id="icon" src="images.png"></a> 
    <a href="www.instagram.com"><img id="icon" src="insta.jpeg"></a> 
    <p></p> 
