--- a/vamshi.html
+++ b/vamshi.html
@@ -22,7 +22,7 @@
   </div> 
   <div id="v"> 
    <a href="https://www.facebook.com/vamshi.gujjuboina"><img id="icon" src="fb.png"></a> 
-   <a href="www.whatsapp.com"><img id="icon" src="images.png"></a> 
+   <a href="https://wa.link/doga64"><img id="icon" src="images.png"></a> 
    <a href="www.instagram.com"><img id="icon" src="insta.jpeg"></a> 
    <p></p> 
   </div> 
