--- a/Ramana.html
+++ b/Ramana.html
@@ -27,7 +27,7 @@
    <p>Velupula Venkata Ramana shortly known as raman's. Work is Worship best suites our teddy, his character is a rear combo of wit and wisdom. He will initiate every dam thing in our room and he is studying in ECE branch.He have so many girl friends He is lover boy in our room.</p> 
   </div> 
 <div id="v"> 
-   <a href="www.facebook.com"><img id="icon" src="fb.png"></a> 
+   <a href=" https://www.facebook.com/venkataramana.ntr.velpula"><img id="icon" src="fb.png"></a> 
    <a href="www.whatsapp.com"><img id="icon" src="images.png"></a> 
    <a href="www.instagram.com"><img id="icon" src="insta.jpeg"></a>
   </div>
